fix(graph): overlapping with button

--- a/src/app/components/graphs/graphs.component.scss
+++ b/src/app/components/graphs/graphs.component.scss
@@ -1,8 +1,14 @@
-.graphId{
+.graphId1{
     overflow:scroll;
     widows: 100%;
-    padding-top: 2.5rem;
+    padding-top: 3rem;
 }
+.graphId2{
+  overflow:scroll;
+  widows: 100%;
+  //padding-top: 1rem;
+}
+
 
 .margin-1rem{
     margin:1rem
